Update UI text and colors

--- a/AutoInsights/AutoInsights/src/main/res/layout/fragment_home_screen.xml
+++ b/AutoInsights/AutoInsights/src/main/res/layout/fragment_home_screen.xml
@@ -18,7 +18,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/purple_700"
+        android:background="@color/purple_500"
         android:padding="16dp">
 
 
@@ -230,7 +230,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:onClick="@{fragment.onClickSummery}"
-                    android:text="Summery">
+                    android:text="Summary">
 
                 </com.google.android.material.button.MaterialButton>
             </LinearLayout>
