--- a/AutoInsights/AutoInsights/src/main/res/layout/fragment_register.xml
+++ b/AutoInsights/AutoInsights/src/main/res/layout/fragment_register.xml
@@ -19,7 +19,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:padding="16dp"
-        android:background="@color/purple_700"
+        android:background="@color/purple_500"
         android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -131,7 +131,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textColor="@color/white"
-            android:text="If you already have an account?"
+            android:text="Already have an account?"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bt_loging" />
