--- a/AutoInsights/AutoInsights/src/main/res/layout/fragment_summery.xml
+++ b/AutoInsights/AutoInsights/src/main/res/layout/fragment_summery.xml
@@ -19,7 +19,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:padding="16dp"
-        android:background="@color/purple_700"
+        android:background="@color/purple_500"
         android:layout_height="match_parent">
 
 
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Summery"
+            android:text="Summary"
             android:textSize="30dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
