added updated launcher and register page UI

--- a/AutoInsights/app/src/main/res/layout/fragment_launcher.xml
+++ b/AutoInsights/app/src/main/res/layout/fragment_launcher.xml
@@ -19,15 +19,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:padding="16dp"
-        android:background="@color/purple_700"
+        android:background="@drawable/login_background"
         android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
-            android:background="@color/white"
+            android:layout_marginTop="250dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +34,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_username"
-                android:background="@color/white"
+                android:fontFamily="@font/rowdies_l"
+                android:background="@drawable/rounded_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Username" />
@@ -45,8 +45,7 @@
             android:id="@+id/textInputLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
+            android:layout_marginTop="5dp"
             app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,9 +53,10 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_password"
+                android:fontFamily="@font/rowdies_l"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@drawable/rounded_layout"
                 android:inputType="textPassword"
                 android:hint="Password" />
 
@@ -69,8 +69,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
+            android:fontFamily="@font/rowdies_l"
             android:onClick="@{fragment.onClickLogin}"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
+            android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
@@ -81,6 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Don't have an account?"
+            android:fontFamily="@font/rowdies_l"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Register"
+            android:fontFamily="@font/rowdies_l"
             android:onClick="@{fragment.onClickRegister}"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,24 +105,36 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/rowdies_b"
             android:text="AutoInsights"
             android:textColor="@color/white"
-            android:textSize="30dp"
+            android:textSize="50sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_account_circle"
+            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <ImageView
             android:id="@+id/im_biometrics"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_weight="1"
+            android:tint="@color/white"
             android:onClick="@{fragment.onClickBiometrics}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bt_register"
             app:srcCompat="@drawable/ic_biometrcis"
-            tools:layout_editor_absoluteX="3dp"
-            tools:layout_editor_absoluteY="549dp" />
+            tools:layout_editor_absoluteX="16dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
