--- a/AutoInsights/AutoInsights/src/main/res/layout/fragment_launcher.xml
+++ b/AutoInsights/AutoInsights/src/main/res/layout/fragment_launcher.xml
@@ -19,7 +19,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:padding="16dp"
-        android:background="@color/purple_500"
+        android:background="@color/#762cb0"
         android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
