--- a/AutoInsights/app/src/main/res/layout/fragment_home_screen.xml
+++ b/AutoInsights/app/src/main/res/layout/fragment_home_screen.xml
@@ -18,7 +18,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/purple_700"
+        android:background="#762cb0"
         android:padding="16dp">
 
 
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="AutoInsights"
-            android:textColor="@color/white"
+            android:textColor="#f5be18"
             android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
