--- a/AutoInsights/app/src/main/res/layout/fragment_home_screen.xml
+++ b/AutoInsights/app/src/main/res/layout/fragment_home_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -18,67 +19,95 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#762cb0"
-        android:padding="16dp">
+        android:background="#E5E5F3">
 
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="AutoInsights"
-            android:textColor="#f5be18"
-            android:textSize="30dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:src="@drawable/top_background_gradient"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <TextView
+                android:id="@+id/AutoInsights"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/fava"
+                android:shadowColor="#DF000000"
+                android:shadowRadius="20"
+                android:text="AutoInsights"
+                android:textAlignment="center"
+                android:textColor="@color/yellow"
+                android:textSize="50sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.1" />
+
+            <LinearLayout
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_layout"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/AutoInsights">
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:fontFamily="@font/rowdies_l"
+                    android:gravity="center"
+                    android:text="Date"
+                    android:textSize="15dp" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ScrollView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:id="@+id/scrollView2"
+            android:layout_width="360dp"
+            android:layout_height="550dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            app:layout_constraintVertical_bias="0">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.517"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:layout_constraintVertical_bias="0.0">
+                app:layout_constraintTop_toBottomOf="@+id/textView3">
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/rounded_layout"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <TextView
-                        android:id="@+id/tv_date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:gravity="center"
-                        android:padding="16dp"
-                        android:text="Date"
-                        android:textSize="15dp" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/ll_user_status"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_height="70dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/rounded_layout"
                     android:orientation="horizontal"
                     android:weightSum="2">
@@ -88,6 +117,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
+                        android:fontFamily="@font/rowdies_l"
                         android:gravity="left"
                         android:padding="16dp"
                         android:text="User Status"
@@ -97,43 +127,52 @@
                         android:id="@+id/tv_user_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:gravity="right"
+                        android:fontFamily="@font/rowdies_l"
+                        android:gravity="right|center_vertical"
                         android:padding="16dp"
-                        android:text="Waiting for the google service..."
+                        android:text="Waiting for service..."
                         android:textSize="15dp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/ll_driver_data"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="340dp"
+                    android:background="@drawable/rounded_layout"
+                    android:backgroundTint="#762cb0"
                     android:orientation="vertical">
 
                     <LinearLayout
                         android:id="@+id/ll_velocity"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
+                        android:layout_width="340dp"
+                        android:layout_height="65dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="14dp"
                         android:background="@drawable/rounded_layout"
+                        android:gravity="center|center_vertical"
                         android:orientation="horizontal"
                         android:weightSum="2">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="320dp"
+                            android:layout_height="60dp"
+                            android:layout_gravity="center"
                             android:layout_weight="1"
+                            android:fontFamily="@font/rowdies_l"
                             android:gravity="left"
                             android:padding="16dp"
-                            android:text="Velocity"
+                            android:text="Speed"
                             android:textSize="15dp" />
 
                         <TextView
                             android:id="@+id/tv_velocity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="320dp"
+                            android:layout_height="60dp"
                             android:layout_gravity="center"
                             android:layout_weight="1"
+                            android:fontFamily="@font/rowdies_l"
                             android:gravity="right"
                             android:padding="16dp"
                             android:text="N/A"
@@ -142,10 +181,12 @@
 
                     <LinearLayout
                         android:id="@+id/ll_acceleration"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
+                        android:layout_width="340dp"
+                        android:layout_height="65dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="14dp"
                         android:background="@drawable/rounded_layout"
+                        android:gravity="center"
                         android:orientation="horizontal"
                         android:weightSum="2">
 
@@ -154,6 +195,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_weight="1"
+                            android:fontFamily="@font/rowdies_l"
                             android:gravity="left"
                             android:padding="16dp"
                             android:text="Acceleration"
@@ -164,6 +206,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:fontFamily="@font/rowdies_l"
                             android:gravity="right"
                             android:padding="16dp"
                             android:text="N/A"
@@ -172,10 +215,12 @@
 
                     <LinearLayout
                         android:id="@+id/ll_hard_stop"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
+                        android:layout_width="340dp"
+                        android:layout_height="65dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="14dp"
                         android:background="@drawable/rounded_layout"
+                        android:gravity="center|center_vertical"
                         android:orientation="horizontal"
                         android:weightSum="2">
 
@@ -183,9 +228,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:fontFamily="@font/rowdies_l"
                             android:gravity="left"
                             android:padding="16dp"
-                            android:text="Hard Stop Count"
+                            android:text="Hard Stops"
                             android:textSize="15dp" />
 
                         <TextView
@@ -194,6 +240,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_weight="1"
+                            android:fontFamily="@font/rowdies_l"
                             android:gravity="right"
                             android:padding="16dp"
                             android:text="N/A"
@@ -202,10 +249,12 @@
 
                     <LinearLayout
                         android:id="@+id/ll_user_fast_acceleration"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
+                        android:layout_width="340dp"
+                        android:layout_height="65dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="14dp"
                         android:background="@drawable/rounded_layout"
+                        android:gravity="center|center_vertical"
                         android:orientation="horizontal"
                         android:weightSum="2">
 
@@ -213,9 +262,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:fontFamily="@font/rowdies_l"
                             android:gravity="left"
                             android:padding="16dp"
-                            android:text="Fast Acceleration Count"
+                            android:text="Fast Accelerations"
                             android:textSize="15dp" />
 
                         <TextView
@@ -224,6 +274,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_weight="1"
+                            android:fontFamily="@font/rowdies_l"
                             android:gravity="right"
                             android:padding="16dp"
                             android:text="N/A"
@@ -234,10 +285,12 @@
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/bt_rider"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_height="75dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/rowdies_l"
                     android:onClick="@{fragment.onClickSummery}"
                     android:text="Start Ride"
+                    android:textSize="30sp"
                     android:visibility="visible">
 
                 </com.google.android.material.button.MaterialButton>
