--- a/AutoInsights/app/src/main/res/layout/fragment_launcher.xml
+++ b/AutoInsights/app/src/main/res/layout/fragment_launcher.xml
@@ -102,14 +102,17 @@
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/im_logo"
+            android:layout_width="333dp"
+            android:layout_height="67dp"
             android:layout_marginTop="30dp"
-            android:fontFamily="@font/rowdies_b"
+            android:fontFamily="@font/fava"
+            android:shadowColor="#DF000000"
+            android:shadowRadius="20"
             android:text="AutoInsights"
             android:textColor="#f5be18"
             android:textSize="50sp"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +124,7 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:onClick="@{fragment.onClickBiometrics}"
-            android:tint="@color/white"
+            app:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bt_register"
             app:srcCompat="@drawable/ic_biometrcis"
@@ -135,9 +138,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/im_logo"
             app:layout_constraintVertical_bias="0.379"
-            app:srcCompat="@drawable/secondary_split_a_2020_rgb" />
+            app:srcCompat="@drawable/ualbany_logo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
