--- a/AutoInsights/app/src/main/res/layout/fragment_summary.xml
+++ b/AutoInsights/app/src/main/res/layout/fragment_summary.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,17 +9,18 @@
 
         <variable
             name="viewmodel"
-            type="com.damc.driver_action.ui.homeBase.settings.SettingsViewModel" />
+            type="com.damc.driver_action.ui.homeBase.summaryScreen.SummaryViewModel" />
 
         <variable
             name="fragment"
-            type="com.damc.driver_action.ui.homeBase.settings.SettingsFragment" />
+            type="com.damc.driver_action.ui.homeBase.summaryScreen.SummaryFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#E5E5F3">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -48,7 +49,7 @@
                 android:fontFamily="@font/fava"
                 android:shadowColor="#DF000000"
                 android:shadowRadius="10"
-                android:text="Settings"
+                android:text="Summary"
                 android:textAlignment="center"
                 android:textColor="#f5be18"
                 android:textSize="40sp"
@@ -59,55 +60,19 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+            android:layout_height="620dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="0dp">
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_summary"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/rounded_layout"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <CheckBox
-                    android:id="@+id/cb_biometrics"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="clip_vertical"
-                    android:fontFamily="@font/rowdies_l"
-                    android:text="Enable Biometrics"
-                    android:textColor="#404040">
-
-                </CheckBox>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_layout"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <CheckBox
-                    android:id="@+id/cb_driver_tracking"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="clip_vertical"
-                    android:fontFamily="@font/rowdies_l"
-                    android:text="Disable Drive Tracking"
-                    android:textColor="#404040">
-
-                </CheckBox>
-
-            </LinearLayout>
-        </LinearLayout>
+                android:layout_height="wrap_content" />
+        </ScrollView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
