--- a/AutoInsights/app/src/main/res/layout/summary_adapter.xml
+++ b/AutoInsights/app/src/main/res/layout/summary_adapter.xml
@@ -334,7 +334,6 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
@@ -356,6 +355,30 @@
                     android:textStyle="bold">
 
                 </TextView>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_layout"
+                android:backgroundTint="@color/yellow"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/bt_send_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Send Email"
+                    android:textColor="#762cb0"
+                    android:textSize="20sp"
+                    android:textStyle="bold">
+
+                </TextView>
+
             </LinearLayout>
 
         </LinearLayout>
