--- a/AutoInsights/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/AutoInsights/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,7 +9,7 @@
         android:id="@+id/it_summery"
         android:enabled="true"
         android:icon="@drawable/ic_all"
-        android:title="Summery"/>
+        android:title="Summary"/>
     <item
         android:id="@+id/it_settings"
         android:enabled="true"
